# GnR-UQ

./: CMakeLists.txt  MC_uniform_G.cpp  MC_uniform_K.cpp  MC_uniform_c.cpp  Model_wall.cpp  Model_wall.hpp  main.cpp  uniform-c.cpp
data/: distribution-uniform-G.txt  mean-uniform-G.txt  mean-uniform-c.txt  var-uniform-G.txt  var-uniform-c.txt
